# cosmic-edit

./: .releaserc.yaml  CHANGELOG.md  Cargo.toml  README.md  TESTING.md  Taskfile.yml
debian/: control
i18n/af/: cosmic_edit.ftl
i18n/ar/: cosmic_edit.ftl
i18n/be/: cosmic_edit.ftl
i18n/bg/: cosmic_edit.ftl
i18n/cs/: cosmic_edit.ftl
i18n/de/: cosmic_edit.ftl
i18n/el/: cosmic_edit.ftl
i18n/en/: cosmic_edit.ftl
i18n/eo/: cosmic_edit.ftl
i18n/es/: cosmic_edit.ftl
i18n/es-419/: cosmic_edit.ftl
i18n/et/: cosmic_edit.ftl
i18n/fa/: cosmic_edit.ftl
i18n/fi/: cosmic_edit.ftl
i18n/fr/: cosmic_edit.ftl
i18n/fy/: cosmic_edit.ftl
i18n/ga/: cosmic_edit.ftl
i18n/he/: cosmic_edit.ftl
i18n/hi/: cosmic_edit.ftl
i18n/hu/: cosmic_edit.ftl
i18n/id/: cosmic_edit.ftl
i18n/is/: cosmic_edit.ftl
i18n/it/: cosmic_edit.ftl
i18n/ja/: cosmic_edit.ftl
i18n/kk/: cosmic_edit.ftl
i18n/kn/: cosmic_edit.ftl
i18n/ko-KR/: cosmic_edit.ftl
i18n/lt/: cosmic_edit.ftl
i18n/nb-NO/: cosmic_edit.ftl
i18n/nl/: cosmic_edit.ftl
i18n/nn/: cosmic_edit.ftl
i18n/pa/: cosmic_edit.ftl
i18n/pl/: cosmic_edit.ftl
i18n/pt/: cosmic_edit.ftl
i18n/pt-BR/: cosmic_edit.ftl
i18n/ro/: cosmic_edit.ftl
i18n/ru/: cosmic_edit.ftl
i18n/sk/: cosmic_edit.ftl
i18n/sr-Cyrl/: cosmic_edit.ftl
i18n/sr-Latn/: cosmic_edit.ftl
i18n/sv-SE/: cosmic_edit.ftl
i18n/tr/: cosmic_edit.ftl
i18n/uk/: cosmic_edit.ftl
i18n/zh-CN/: cosmic_edit.ftl
i18n/zh-TW/: cosmic_edit.ftl
pkg/rpm/: cosmic-edit.spec
res/: com.system76.CosmicEdit.desktop  com.system76.CosmicEdit.metainfo.xml
src/: localize.rs  main.rs  menu.rs  mime_icon.rs  project.rs  tab.rs  text_box.rs
