[package]
name = "cosmic-edit"
version = "1.0.0"
authors = ["Jeremy Soller <jeremy@system76.com>"]
edition = "2024"
license = "GPL-3.0-only"
rust-version = "1.90"

[dependencies]
dirs = "6"
env_logger = "0.11.8"
grep = "0.3.2"
ignore = "0.4.23"
log = "0.4.28"
notify = "8.2.0"
open = "5.3.2"
paste = "1.0.15"
patch = "0.7.0"
regex = "1.11"
serde = { version = "1", features = ["serde_derive"] }
tokio = { version = "1", features = ["process", "time"] }
# Extra syntax highlighting
syntect = "5.2.0"
two-face = "0.4.3"
# Internationalization
icu = { version = "2.0.0", features = ["compiled_data"] }
unicode-segmentation = "1.12"
i18n-embed = { version = "0.16", features = [
    "fluent-system",
    "desktop-requester",
] }
i18n-embed-fl = "0.10"
rust-embed = "8"

mime_guess = "2"

[dependencies.cosmic-syntax-theme]
git = "https://github.com/pop-os/cosmic-syntax-theme.git"

[dependencies.cosmic-text]
git = "https://github.com/pop-os/cosmic-text.git"
features = ["syntect", "vi"]

[dependencies.libcosmic]
git = "https://github.com/pop-os/libcosmic.git"
default-features = false
#TODO: a11y feature crashes file choser dialog
features = ["about", "multi-window", "tokio", "winit", "surface-message", "xdg-portal"]

[target.'cfg(unix)'.dependencies]
fork = "0.2"

[build-dependencies]
xdgen = "0.1"

[features]
default = ["dbus-config", "wgpu", "wayland"]
dbus-config = ["libcosmic/dbus-config"]
wgpu = ["libcosmic/wgpu"]
wayland = ["libcosmic/wayland"]

[profile.release-with-debug]
inherits = "release"
debug = true

[patch.crates-io]
onig = { git = "https://github.com/rust-onig/rust-onig.git", branch = "main" }
onig_sys = { git = "https://github.com/rust-onig/rust-onig.git", branch = "main" }

[patch.'https://github.com/pop-os/libcosmic']
libcosmic = { git = "https://github.com/playtron-os/libcosmic.git", rev = "2a9deff09" }
cosmic-config = { git = "https://github.com/playtron-os/libcosmic.git", rev = "2a9deff09" }
cosmic-config-derive = { git = "https://github.com/playtron-os/libcosmic.git", rev = "2a9deff09" }
cosmic-theme = { git = "https://github.com/playtron-os/libcosmic.git", rev = "2a9deff09" }
iced = { git = "https://github.com/playtron-os/libcosmic.git", rev = "2a9deff09" }
iced_core = { git = "https://github.com/playtron-os/libcosmic.git", rev = "2a9deff09" }
iced_futures = { git = "https://github.com/playtron-os/libcosmic.git", rev = "2a9deff09" }
iced_graphics = { git = "https://github.com/playtron-os/libcosmic.git", rev = "2a9deff09" }
iced_renderer = { git = "https://github.com/playtron-os/libcosmic.git", rev = "2a9deff09" }
iced_runtime = { git = "https://github.com/playtron-os/libcosmic.git", rev = "2a9deff09" }
iced_tiny_skia = { git = "https://github.com/playtron-os/libcosmic.git", rev = "2a9deff09" }
iced_wgpu = { git = "https://github.com/playtron-os/libcosmic.git", rev = "2a9deff09" }
iced_widget = { git = "https://github.com/playtron-os/libcosmic.git", rev = "2a9deff09" }
iced_winit = { git = "https://github.com/playtron-os/libcosmic.git", rev = "2a9deff09" }

[patch.'https://github.com/pop-os/cosmic-text']
cosmic-text = { git = "https://github.com/pop-os/cosmic-text//", rev = "f31b9d8" }
